# Master-Degree

./: Paper (Scrap).txt  README.md
Arduino/: README.md
Arduino/FSS/: FSS.ino  HX711.cpp  HX711.h
Arduino/Railway_StepMotor/: HCMotor.h  HCmotor.cpp  Railway_StepMotor.ino
Classification Network/: Data_Processing.py  ENC_MLP.py  FCN.py  LR.py  LSTM_ENC.py  LSTM_MLP.py  MLP.py  README.md  Raw_Compiled.py  ResNet.py  SVM.py  Time-CNN.py
Classification Network/Etc Network/: Enc_MLP.py  LSTM_Autoencoder.py  LSTM_MLP.py  LogisticRegression.py  SVM.py
Main PC/Slip_Detection_and_Grasp_Stabilization/: CMakeLists.txt  package.xml
Main PC/gripperslip/: CMakeLists.txt  package.xml
Main PC/gripperslip/scripts/: FSS_.py  (+3 more)
Main PC/slip_detection_and_grasp_stabilization/: README.md
Matlab/: Classification_Data.m  DataSorting.m  Data_Analysis.m  General_Exp_Matlab.m  Manipulator_Path_Generation.m  Natural_Slip_Analysis.m  Poster_Purposes.m  Presentation_Purposes.m  README.md  cell2mat2.m  topic_read.m  topic_read_old.m
Sub PC/opencv_object_tracking/: CMakeLists.txt  README.md
Sub PC/opencv_object_tracking/include/opencv_object_tracking/: aruco_tracker.hpp
Sub PC/opencv_object_tracking/msg/: Data.msg  Data_Array.msg
Sub PC/opencv_object_tracking/scripts/: aruco_data_collection.py
Sub PC/opencv_object_tracking/src/: aruco_tracker.cpp
slip_detection_and_grasp_stabilization/: CMakeLists.txt  package.xml
slip_detection_and_grasp_stabilization/msg/: Slip_Vector_msg.msg
slip_detection_and_grasp_stabilization/scripts/: Dynamixel_Subs_ROS.py  FSS_.py  MainCode.py
(+11 files in other folders)
